== master

== 0.1.0 / 2008-10-26

* Change how the base module is included to prevent namespacing conflicts
* Round to two decimal places for rating averages

== 0.0.2 / 2008-06-22

* Remove log files from gems

== 0.0.1 / 2008-05-09

* Initial public release